--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1 id ="heading">Welcome, javascript!!!</h1>
-    <script src="js/day-3/scope.js"></script>
+    <script src="js/day-4/closures.js"></script>
 </body>
 </html>
