--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1 id ="heading">Welcome, javascript!!!</h1>
-    <script src="js/day-4/closures.js"></script>
+    <button id="clickMe">Click Me</button>
+    <script src="js/day-5/callback.js"></script>
 </body>
 </html>
