Callback Hell, Promises, Promise Chain, Promise APIs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1 id ="heading">Welcome, javascript!!!</h1>
     <button id="clickMe">Click Me</button>
-    <script src="js/day-7/higherorderfunctions.js"></script>
+    <script src="js/day-8/promisetask.js"></script>
 </body>
 </html>
