--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 id ="heading">Welcome, javascript!!!</h1>
-    <button id="clickMe">Click Me</button>
-    <script src="js/day-8/promisetask.js"></script>
+    <button id="clickMe" onclick="alert(this)">Click Me</button>
+    <script src="js/day-9/async-await.js"></script>
 </body>
 </html>
