Call, Apply, Bind, Prototype, Currying

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1 id ="heading">Welcome, javascript!!!</h1>
     <button id="clickMe" onclick="alert(this)">Click Me</button>
-    <script src="js/day-9/async-await.js"></script>
+    <script src="js/day-10/bind.js"></script>
 </body>
 </html>
