--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         <input type="text" id="pan" data-uppercase>
         <input type="text" id="mobile">
     </div>
-    <script src="Basic/day-11/classes.js"></script>
+    <script src="Basic/day-12/promises.js"></script>
 </body>
 </html>
